mobile spacing fixed

--- a/style.css
+++ b/style.css
@@ -563,8 +563,8 @@ section{
   }
 
   #about{
-      margin-top:-150px !important;
-      padding-top:0 !important;
+      margin-top:-50px !important;
+      padding-top:10px !important;
   }
 
 }
